--- a/style.css
+++ b/style.css
@@ -27,7 +27,12 @@
 
   /* Size */
   --size-border-radius:4px;
+
+  /* Animation */
+  --animation-duration:300ms;
 }
+
+
 
 *{
     box-sizing: border-box;
@@ -154,4 +159,76 @@ h1 {
     border: 2px solid var(--color-white);
     border-radius: var(--size-border-radius);
     color: var(--color-white);
+}
+
+/* Section common */
+.section{
+    padding: 50px;
+    text-align: center;
+    max-width: 1200px;
+    margin: auto;
+}
+
+/* About */
+.about__majors{
+    display: flex;
+    justify-content: space-between;
+    margin: 80px 0;
+}
+
+.major__icon{
+    width: 170px;
+    height: 170px;
+    line-height: 170px ;
+    font-size: 70px;
+    margin: auto;
+    color: var(--color-blue);
+    border: 1px solid var(--color-blue);
+    border-radius: 50%;
+    margin-bottom: 16px;
+    
+}
+.major__icon svg{
+    transition: all var(--animation-duration) ease-in-out;
+}
+
+.major__icon:hover svg{
+    color: var(--color-light-grey);
+    transform: rotate(-30deg) scale(1.2);
+}
+
+
+.major__title,
+.major__description{
+    color: var(--color-dark-grey);
+}
+
+.major__description{
+    font-size: var(--font-small);
+}
+/* About job */
+.job__logo{
+    width: 40px;
+}
+
+.job{
+    display: flex;
+    align-items: center;
+}
+
+.job__description{
+    margin: 0 16px;
+    text-align: left;
+}
+
+.job__name,
+.job__period{
+    color: var(--color-light-grey);
+}
+
+.job__name{
+    font-size: var(--font-small);
+}
+.job__period{
+    font-size: var(--font-micro);
 }
