--- a/style.css
+++ b/style.css
@@ -165,6 +165,10 @@ h1 {
 .section{
     padding: 50px;
     text-align: center;
+    
+    margin: auto;
+}
+.section__container{
     max-width: 1200px;
     margin: auto;
 }
@@ -231,4 +235,59 @@ h1 {
 }
 .job__period{
     font-size: var(--font-micro);
+}
+
+#skills{
+    background-color: var(--color-yellow);
+}
+
+.skillset{
+    display: flex;
+    background-color: var(--color-light-grey);
+    color: var(--color-light-white);
+    margin: 20px 0;
+    
+}
+
+.skillset__title{
+    color: var(--color-white);
+}
+
+.skill__description{
+    display: flex;
+    justify-content: space-between;
+}
+
+.skillset__left{
+    flex-basis: 60%;
+    background-color: var(--color-dark-grey);
+    padding: 20px 40px;
+}
+
+.skill{
+    margin-bottom: 32px;
+}
+
+.skill_bar{
+width: 100%;
+height: 3px;
+background-color: var(--color-grey);
+}
+
+.skill__value{
+height: 3px;
+background-color: var(--color-orange);
+}
+
+.skillset__right{
+    flex-basis: 40%;
+}
+
+.tools{
+    background-color:var(--color-grey)
+}
+
+.tools,
+.etc{
+ padding: 20px;   
 }
