--- a/style.css
+++ b/style.css
@@ -389,3 +389,45 @@ background-color: var(--color-orange);
     height: 2px;
     background-color: var(--color-dark-white);
 }
+
+#testimonials{
+    background-color: var(--color-light-white);
+}
+
+.testimonials{
+    
+}
+
+.testimonial{
+    display: flex;
+    margin: 40px;
+}
+
+.testimonial img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+
+}
+
+.testimonial img:nth-child(odd){
+    margin-right: 40px;
+}
+
+.testimonial img:nth-child(even){
+    margin-left: 40px;
+}
+
+.testimonial__speech-bubble{
+    padding: 18px;
+    background-color:var(--color-white);
+    border-radius: var(--size-border-radius);
+}
+
+.testimonial__speech-bubble p{
+    color: var(--color-light-grey)
+}
+
+.testimonial__speech-bubble a{
+    color: var(--color-pink);
+}
