--- a/style.css
+++ b/style.css
@@ -431,3 +431,32 @@ background-color: var(--color-orange);
 .testimonial__speech-bubble a{
     color: var(--color-pink);
 }
+
+#contact{
+    background-color:var(--color-pink);
+}
+
+.contact__title,
+.contact__email,
+.contact__rights{
+    color: var(--color-white);
+}
+
+.contact__title{
+    margin: 32px 0;
+}
+
+.contact__links{
+    font-size: var(--font-large);
+    margin: 24px 0;
+}
+
+.contact__links svg{
+    transition: all var(--animation-duration) ease-in;
+
+}
+
+.contact__links svg:hover {
+    transform: scale(1.1);
+    color: var(--color-yellow);
+}
