--- a/style.css
+++ b/style.css
@@ -132,6 +132,15 @@ h1 {
     
 }
 
+.navbar__toggle-btn{
+    position: absolute;
+    right: 32px;
+    font-size: 24px;
+    color: var(--color-white);
+    top: 24px;
+    display: none;
+}
+
 /* Home */
 #home{
     background: url(/imgs/bg.png) center/cover;
@@ -459,4 +468,42 @@ background-color: var(--color-orange);
 .contact__links svg:hover {
     transform: scale(1.1);
     color: var(--color-yellow);
+}
+
+
+
+@media screen and (max-width:768px){
+    .navbar__toggle-btn{
+        display: block;
+    }
+    #navbar{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .navbar__menu{
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+
+    .about__majors{
+        flex-direction: column;
+    }
+    .major{
+        margin-bottom: 38px;
+    }
+
+    .skillset{
+        flex-direction: column;
+    }
+
+    .project{
+        flex-grow: 1;
+    }
+
+    .testimonial img{
+        width: 80px;
+        height: 80px;
+    }
 }
