--- a/style.css
+++ b/style.css
@@ -97,12 +97,21 @@ h1 {
 
 /* Navbar */
 #navbar{
+    width: 100%;
+    position: fixed;
     display: flex;
     justify-content: space-between;
-    background-color: var(--color-grey);
+    background-color: transparent;
     align-items: center;
     color: var(--color-white);
     padding: 16px;
+    transition: all var(--animation-duration) ease-in-out;
+
+}
+
+#navbar.navbar-dark{
+    background-color: var(--color-dark-grey);
+    padding: 8px;
 }
 
 .navbar__logo{
@@ -507,3 +516,4 @@ background-color: var(--color-orange);
         height: 80px;
     }
 }
+
