--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ h1 {
 #navbar.navbar-dark{
     background-color: var(--color-dark-grey);
     padding: 8px;
+    z-index: 1;
 }
 
 .navbar__logo{
