--- a/style.css
+++ b/style.css
@@ -353,6 +353,13 @@ background-color: var(--color-orange);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    opacity: 1;
+    transition: all var(--animation-duration) ease-out;
+}
+
+.work__projects.animation-out{
+    opacity: 0;
+    transform: scale(0.96) translateY(40px);
 }
 
 .project{
@@ -364,6 +371,9 @@ background-color: var(--color-orange);
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.project.invisible{
+    display: none;
 }
 
 .work__projects img{
