--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ h1 {
     display: flex;
     font-size: var(--font-medium);
     font-weight: var(--weight-semi-bold);
+    align-items: center;
 }
 
 .navbar__menu{
@@ -177,9 +178,14 @@ h1 {
     color: var(--color-white);
 }
 
+.home__contact:hover{
+    background-color: var(--color-light-grey);
+}
+
 /* Section common */
 .section{
     padding: 50px;
+    padding-top: 60px;
     text-align: center;
     
     margin: auto;
@@ -317,6 +323,7 @@ background-color: var(--color-orange);
     border-radius: var(--size-border-radius);
     font-size: var(--font-regular);
     padding: 8px 48px;
+    position: relative;
 }
 
 .category__btn.selected,
@@ -327,7 +334,7 @@ background-color: var(--color-orange);
 
 .category__btn.selected .category__count,
 .category__btn:hover .category__count{
-    top: 0;
+    top: 5px;
     opacity: 1;
 }
 
@@ -339,9 +346,9 @@ background-color: var(--color-orange);
     width: 24px;
     height: 24px;
     line-height: 24px;
-    position: relative;
-    top: -20px;
-    left: 4px;
+    position: absolute;
+    top: -5px;
+    right: 8px;
     opacity: 0;
     transition: all var(--animation-duration) ease-in;
 }
@@ -509,8 +516,19 @@ background-color: var(--color-orange);
 }
 
 @media screen and (max-width:768px){
+    :root{
+        /* Font size */
+        --font-large: 30px;
+        --font-medium: 18px;
+        --font-regular: 16px;
+        --font-small: 14px;
+        --font-micro: 12px;
+    }
     .navbar__toggle-btn{
         display: block;
+        right: 16px;
+        top: 16px;
+        font-size: var(--font-medium);
     }
     #navbar{
         flex-direction: column;
@@ -519,6 +537,10 @@ background-color: var(--color-orange);
     }
     #navbar.navbar-dark{
         padding: 16px;
+    }
+
+    .navbar__logo img{
+        width: 15px;
     }
     .navbar__menu{
         flex-direction: column;
@@ -530,24 +552,59 @@ background-color: var(--color-orange);
         display: block;
     }
 
+    .section{
+        padding: 16px;
+        padding-top: 40px;
+    }
+
     .about__majors{
         flex-direction: column;
+        margin-top: 30px;
+        margin-bottom: 0px;
     }
     .major{
-        margin-bottom: 38px;
+        margin-bottom: 30px;
     }
 
     .skillset{
         flex-direction: column;
     }
 
+    .category__btn{
+        padding: 8px 40px;
+        width: 100%;
+    }
+
     .project{
         flex-grow: 1;
     }
 
+    .testimonial{
+        flex-direction: column;
+        align-items: center;
+    }
     .testimonial img{
-        width: 80px;
-        height: 80px;
+        width: 120px;
+        height: 120px;
+
+    }
+    .testimonial img:nth-child(even),
+    .testimonial img:nth-child(odd)
+    {
+        margin: 0;
+        margin-bottom: 8px;
+
+    }
+    .testimonial__speech-bubble{
+        order: 1;
+    }
+    .arrow-up{
+        width: 50px;
+        height: 50px;
+        font-size: 30px;
+        line-height: 50px;
+        right: 16px;
+        bottom: 16px;
     }
 }
 
